--- a/k8s_files/deployment.yaml
+++ b/k8s_files/deployment.yaml
@@ -2,22 +2,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pandacloud-app
+  name: prime_deployment
   labels:
-    app: pandacloud-app
+    app: prime-clone
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: pandacloud-app
+      app: prime-clone
   template:
     metadata:
       labels:
-        app: pandacloud-app
+        app: prime-clone
     spec:
       containers:
-      - name: pandacloud-container
-        image: 309395755719.dkr.ecr.us-east-1.amazonaws.com/amazon-prime:latest
+      - name: prime-container
+        image: dockerpavank/prime-clone:latest
         ports:
         - containerPort: 3000
 ...
