Rename service and update labels in service.yaml

--- a/k8s_files/service.yaml
+++ b/k8s_files/service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pandacloud-app
+  name: prime_service
   labels:
-    app: pandacloud-app
+    app: prime-clone
 spec:
   ports:
   - name: http
